--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:dev": "npx webpack --config cfg/webpack.config.js",
     "build": "npx webpack --config cfg/webpack.config.js",
-    "dev": "node bin/dev.js",
+    "dev": "rm -rf dist && node bin/dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,13 +21,26 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@loadable/webpack-plugin": "^5.15.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "nodemon": "^2.0.20",
     "prettier": "2.8.3",
+    "react-refresh": "^0.14.0",
     "reload": "^3.2.1",
+    "time-fix-plugin": "^2.0.7",
     "ts-loader": "^9.4.2",
+    "type-fest": "^3.5.4",
     "typescript": "^4.9.5",
-    "webpack": "^5.75.0",
+    "webpack": "^5.2.1",
     "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.0.1",
+    "webpack-hot-middleware": "^2.25.3",
     "webpack-node-externals": "^3.0.0"
   }
 }
