--- a/M2/package.json
+++ b/M2/package.json
@@ -2,11 +2,10 @@
   "name": "bonzar-skillbox-reactjs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "build:dev": "npx webpack --config cfg/webpack.config.js",
     "build": "npx webpack --config cfg/webpack.config.js",
-    "dev": "rm -rf dist && node bin/dev.js",
+    "clean": "rm -rf ../dist",
+    "dev": "npm run clean && node bin/dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,14 +26,20 @@
     "@babel/preset-typescript": "^7.18.6",
     "@loadable/webpack-plugin": "^5.15.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@types/jest": "^29.4.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
+    "concurrently": "^7.6.0",
+    "css-loader": "^6.7.3",
+    "jest": "^29.4.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.8.3",
     "react-refresh": "^0.14.0",
-    "reload": "^3.2.1",
-    "time-fix-plugin": "^2.0.7",
-    "ts-loader": "^9.4.2",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.5",
     "type-fest": "^3.5.4",
     "typescript": "^4.9.5",
     "webpack": "^5.2.1",
