--- a/M2/package.json
+++ b/M2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "build": "npx webpack --config cfg/webpack.config.js",
-    "clean": "rm -rf ../dist",
+    "clean": "rm -rf ./dist",
     "dev": "npm run clean && node bin/dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
