--- a/M3/package.json
+++ b/M3/package.json
@@ -12,36 +12,14 @@
     "type": "git",
     "url": "git@gitlab.skillbox.ru:vladislav_navoian/ReactJS.git"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@types/jest": "^29.4.0",
-    "babel-loader": "^9.1.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.7.3",
-    "jest": "^29.4.1",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "nodemon": "^2.0.20",
-    "react-refresh": "^0.14.0",
-    "style-loader": "^3.3.1",
-    "ts-jest": "^29.0.5",
-    "type-fest": "^3.5.4",
-    "typescript": "^4.9.5",
-    "webpack": "^5.2.1",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-middleware": "^6.0.1",
-    "webpack-hot-middleware": "^2.25.3",
-    "webpack-node-externals": "^3.0.0"
+    "@types/react": "^18.0.27",
+    "typescript": "^4.9.5"
   }
 }
