--- a/M4/package.json
+++ b/M4/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "unique-names-generator": "^4.7.1",
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
