--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "the-new-css-reset": "1.8.4"
   },
   "devDependencies": {
     "prettier": "2.8.3"
