--- a/M6/package.json
+++ b/M6/package.json
@@ -6,7 +6,8 @@
     "build": "npx webpack --config cfg/webpack.config.js",
     "clean": "rm -rf ./dist",
     "dev": "npm run clean && node bin/dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -28,13 +29,18 @@
     "@babel/preset-typescript": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "^6.5.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
     "@types/ramda": "^0.28.23",
     "@types/react": "^18.0.28",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.5.0",
     "nodemon": "^2.0.20",
     "prettier": "2.8.3",
     "react-refresh": "^0.14.0",
