added default values in Icon component for width and height of svg element setup to 100% added User Block in Header added OAuth for reddit

--- a/M7/package.json
+++ b/M7/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npx webpack --config cfg/webpack.config.js",
     "clean": "rm -rf ./dist",
-    "dev": "npm run clean && node bin/dev.js",
+    "dev": "npm run clean && env NODE_ENV=development CLIENT_ID=UEeMmkjxYRSjI-A-MKY8Pw node bin/dev.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
