--- a/M8/package.json
+++ b/M8/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
