--- a/M10/package.json
+++ b/M10/package.json
@@ -16,12 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "the-new-css-reset": "1.8.4"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@redux-devtools/core": "^3.13.1",
     "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
